[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fcp-plotting"
dynamic = ["version"]
description = "Matplotlib helper for Four-Coordinate Paper (FCP) pseudo-velocity shock plots"
requires-python = ">=3.8"
authors = [{ name = "ncos", email = "ncos@example.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["shock", "pseudo-velocity", "pvss", "srs", "plot", "matplotlib"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Visualization",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
]
dependencies = [
  "matplotlib>=3.4",
  "numpy>=1.21",
]

[project.urls]
Homepage = "https://github.com/ncos/four-quadrant-plotting"
Repository = "https://github.com/ncos/four-quadrant-plotting"
Issues = "https://github.com/ncos/four-quadrant-plotting/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/fcp_plotting/_version.py"
fallback_version = "0.3.0"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "jupyter>=1.0",
]
dev = [
  "pytest>=7",
  "jupyter>=1.0",
  "black>=22.0",
  "flake8>=4.0",
  "mypy>=0.900",
]
